#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

#AC_PREREQ([2.69])
AC_INIT([glnetviz_examples], [0.91], [@gpp256])

# Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_CC
AC_PATH_PROG([CMD_CURL],[curl],[/usr/bin/curl])
AC_PATH_PROG([CMD_PERL],[perl],[/usr/bin/perl])
AC_PATH_PROG([CMD_GZIP],[gzip],[/usr/bin/gzip])
AC_PATH_PROG([CMD_GIT],[git],[/usr/bin/git])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 geoip-example01/Makefile
                 geoip-example01/get_objpos.cgi
                 geoip-example01/get_geolocation.cgi
                 geoip-example01/scripts/getdb.sh
                 geoip-example01/scripts/install_geoip.sh
                 jqplot-example01/Makefile
                 jqplot-example01/get_objs.cgi
                 sdashboard-example01/Makefile
                 sdashboard-example01/get_objs.cgi
])
AC_OUTPUT
